# mongorepo

./: README.md  pyproject.toml  requirements-dev.txt
examples/: basic_crud.py
src/mongorepo/: __init__.py  client.py  database.py  entity.py  enums.py  exceptions.py  helpers.py  indexes.py  logging.py  models.py  repository.py  results.py  transactions.py  types.py
src/mongorepo/errors/: __init__.py  configuration.py  database.py  query.py  repository.py  validation.py
src/mongorepo/indexes/: __init__.py  base.py  compound.py  enums.py  geo2d.py  hashed.py  partial.py  single.py  text.py  ttl.py  wildcard.py
src/mongorepo/pydantic/: __init__.py  data_types.py  helpers.py  models.py
tests/: common_tests.py  conftest.py  test_client.py  test_database.py  test_entity.py  test_indexes.py
