[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "mongorepo"
version = "0.1.0"
description = "A modern async MongoDB repository framework for Python, built on PyMongo Async and Pydantic with typed repositories, index management, transactions, pagination, and aggregation support."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"

authors = [
    { name = "Amol Rupnar" }
]

keywords = [
    "mongodb",
    "pymongo",
    "asyncio",
    "repository",
    "fastapi",
    "pydantic",
    "database",
    "nosql",
    "mongo"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "pymongo>=4.11,<5",
    "pydantic>=2.10,<3"
]

[project.urls]
Homepage = "https://github.com/datalabio/mongorepo"
Documentation = "https://github.com/datalabio/mongorepo"
Repository = "https://github.com/datalabio/mongorepo"
Issues = "https://github.com/datalabio/mongorepo/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mongorepo"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests"
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B"
]

[tool.coverage.run]
source = [
    "mongorepo"
]

[tool.coverage.report]
show_missing = true
skip_covered = true
